# solana-ua-bootcamp-2024-08-06

practice-1/rust-ver/: Cargo.toml
practice-1/rust-ver/src/: main.rs
practice-2/: .env  Cargo.toml
practice-2/task_2_10/: Cargo.toml
practice-2/task_2_10/src/: main.rs  reciever_work.rs  sender_work.rs
practice-2/task_2_11/: Cargo.toml
practice-2/task_2_11/src/: create_nonce.rs  main.rs  reciever_work.rs  sender_work.rs
practice-2/task_2_8/: Cargo.toml
practice-2/task_2_8/src/: create_token_account.rs  create_token_metadata.rs  create_token_mint.rs  main.rs  mint_tokens.rs  send_sol.rs
practice-2/task_2_9/: Cargo.toml
practice-2/task_2_9/src/: create_multisig.rs  create_multisig_mint.rs  create_token_account.rs  main.rs  mint_tokens.rs
practice-3/task_3_3/escrow_plus/: Anchor.toml  package.json
practice-3/task_3_3/escrow_plus/programs/escrow_plus/: Cargo.toml
practice-3/task_3_3/escrow_plus/programs/escrow_plus/src/: lib.rs
practice-3/task_3_3/escrow_plus/programs/escrow_plus/src/instructions/: make_offer.rs  take_offer.rs
practice-3/task_3_3/escrow_plus/programs/escrow_plus/src/state/: mod.rs  offer_vault.rs
practice-3/task_3_3/escrow_plus/tests/: escrow_plus.test.ts  token_program_error.ts
