[package]
name = "task_2_8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "2.0.5"
dotenv = "0.15.0"
serde_json = "1.0.124"
solana-client = "2.0.5"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
mpl-token-metadata = "4.1.2"
solana_program_mpl = { package = "solana-program", version = "1.18.4" }